# rust-chess-engine

./: .gitignore  AUDIT_PROMPT.md  Cargo.toml  HANDOFF.md
Delete_Later/: chess.md
crates/chess-core/: Cargo.toml
crates/chess-core/src/: display.rs  engine.rs  game.rs  lib.rs  notation.rs  position.rs  traits.rs
crates/chess-core/tests/: perft_tests.rs
crates/chess-desktop/: Cargo.toml
crates/chess-desktop/src/: cli.rs  gui.rs  gui_app.rs  lib.rs
crates/chess-desktop/src/app/: engine_comm.rs  mod.rs  state.rs
crates/chess-desktop/src/ui/: board.rs  mod.rs  theme.rs
crates/chess-desktop/src/ui/components/: eval_bar.rs  game_status.rs  material.rs  mod.rs
crates/chess-desktop/src/ui/panels/: central_panel.rs  left_panel.rs  mod.rs  right_panel.rs  top_bar.rs
crates/chess-desktop/src/utils/: conversions.rs  coords.rs  mod.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/examples/: test_stockfish.rs
crates/chess-engine/src/: lib.rs  stockfish.rs
docs/: COMPREHENSIVE_AUDIT_REPORT.md
