[package]
name = "chess-desktop"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "chess-cli"
path = "src/cli.rs"

[[bin]]
name = "chess-gui"
path = "src/gui.rs"

[lib]
name = "chess_desktop"
path = "src/lib.rs"

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }

# Core Dependencies from Workspace
chess = { workspace = true}
anyhow = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true}

# GUI Dependencies from Workspace
eframe = { workspace = true}
egui = { workspace = true}
egui_extras = { workspace = true}
image = { workspace = true}

# Serialisation
serde = { workspace = true}
serde_json = "1.0.145"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true}